# image-processor

./: README.md
image_processor/: CMakeLists.txt  blur.cpp  blur.h  color.cpp  color.h  convolution.cpp  convolution.h  crop.cpp  crop.h  crystal.cpp  crystal.h  edge.cpp  edge.h  filter.h  filters.cpp  filters.h  grayscale.cpp  grayscale.h  image.cpp  image.h  image_processor.cpp  negative.cpp  negative.h  parser.cpp  parser.h  sharpening.cpp  sharpening.h  test.cpp
